Use OffsetDateTime-based Timestamps in TimeRange (#235)
* Use OffsetDateTime-based Timestamps in TimeRange

* Update OpenAPI client

* Update providers

* Update providers

* Fix runtime

* Use LegacyTimeRange for LogCell

* OpenAPI fixes

* Patch OpenAPI NewTimeRange type

* Correctly mark generated files in GitHub
